Ya funcionan las nuevas tablas

--- a/modules/proyectos/proyectos.html
+++ b/modules/proyectos/proyectos.html
@@ -239,7 +239,7 @@
         </div>
         <div class="modal-form-group">
           <label for="descripcion">Descripción</label>
-          <input type="text" id="descripcion" name="descripcion">
+          <textarea id="descripcion" name="descripcion" rows="2"></textarea>
         </div>
         <div class="modal-form-group">
           <label for="ubicacion">Ubicación de la obra</label>
@@ -290,10 +290,10 @@
           <label for="editar-fecha-final">Fecha fin</label>
           <input type="date" id="editar-fecha-final" name="fecha_final" required />
         </div>
-        <div class="modal-form-group">
+    <!--     <div class="modal-form-group">
           <label for="editar-responsable">Responsable</label>
           <input type="text" id="editar-responsable" name="responsable" required />
-        </div>
+        </div>-->
       </div>
       <button type="submit" class="btn primary">Guardar cambios</button>
     </form>
