Funcionalidades principales terminadas

--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -293,6 +293,9 @@
         <label style="text-align: right;">Tipo</label>
         <input type="text" id="edit-tipo" required>
 
+         <label style="text-align: right;">Pago</label>
+        <input type="text" id="edit-pago">
+
         <label style="text-align: right;">Factura</label>
         <input type="text" id="edit-factura">
 
