--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -223,8 +223,7 @@
         <i class="ri-arrow-right-s-line"></i>
       </button>
     </div>
-    <span id="contador-registros" style="display:block; margin-top:12px; font-weight:600; color:#003B5C;"></span>
- 
+<span id="contador-registros" ></span>
   </div>
 
 
@@ -258,7 +257,7 @@
     <input type="text" id="inputProyecto" placeholder="Selecciona un proyecto" autocomplete="off" />
     <div id="listProyecto" class="autocomplete-list"></div>
   </div>
-  <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer;">Asignar</button>
+  <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer; margin-top:18px;">Asignar</button>
 </form>
   </div>
 </div>
