--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -203,7 +203,7 @@
 
 
            <button class="btn primary" id="descargar-csv">
-  <i class="ri-download-line"></i> Descargar CSV
+  <i class="ri-download-line"></i> Generar Reporte
 </button>
            
           </div>
