Se ajusto la impresion

--- a/modules/gastos/gastos.html
+++ b/modules/gastos/gastos.html
@@ -266,7 +266,7 @@
             </div>
             <div class="modal-form-group">
               <label for="importe">Importe</label>
-              <input type="number" id="importe" name="importe" required>
+              <input type="text" id="importe" name="importe" required pattern="^\d*([.,]\d{1,2})?$">
             </div>
             <div class="modal-form-group autocomplete-container">
               <label for="proyecto-autocomplete">Proyecto</label>
