--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -254,7 +254,11 @@
       </div>
       <!-- ...después de la tabla... -->
 <span id="contador-registros" style="display:block; margin-top:12px; font-weight:600; color:#003B5C;"></span>
-    </div>
+     <button class="btn">
+          <i class="ri-arrow-right-s-line"></i>
+        </button>
+
+</div>
   </div>
         </section>
       </main>
@@ -341,11 +345,17 @@
         <button type="button" class="btn" id="cancelar-modal-editar">Cancelar</button>
       </div>
     </form>
+    
   </div>
 </div>
   <script type="module" src="registros.js"></script>
     <script src="../../Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
+
+<!-- ...existing code... -->
+<div id="print-area" style="display:none"></div>
+<!-- ...existing code... -->
+
 
   </body>
 </html>
