Algunos cambios se realizaron

--- a/modules/gastos/gastos.html
+++ b/modules/gastos/gastos.html
@@ -171,9 +171,9 @@
 <div class="tabla-container" style="border-top: 5px solid #FF6F00; border-radius: 2px;">
 
           <h3 class="listado-title">
-  <i class="ri-table-line" style="color:#FF6F00; margin-right:1px; font-size:1.2em;"></i>
-  Listado de Gastos
-</h3>
+            <i class="ri-table-line" style="color:#FF6F00; margin-right:1px; font-size:1.2em;"></i>
+            Listado de Gastos
+          </h3>
 
 
  <div class="table-container">
@@ -241,6 +241,7 @@
                 <option value="" disabled selected>Selecciona tipo</option>
                 <option value="ticket">Ticket</option>
                 <option value="factura">Factura</option>
+                <option value="no comprobable">No comprobable</option>
               </select>
             </div>
             <div class="modal-form-group">
