--- a/modules/proyectos/proyectos.html
+++ b/modules/proyectos/proyectos.html
@@ -163,6 +163,10 @@
               <input type="text" class="input-buscar" placeholder="Buscar...">
               <i class="ri-search-line"></i>
             </div>
+               <button class="btn-asignar">
+              <i class="ri-add-line"></i>
+              Asignar proyecto
+            </button>
           </div>
     </div>
 
@@ -187,14 +191,14 @@
     <table id="proyectosTable">
       <thead>
         <tr>
-          <th>Cliente</th>
-          <th>Proyecto</th>
-          <th>Descripción</th>
-          <th>Ubicación</th>
-          <th>Fecha inicio</th>
-          <th>Fecha fin</th>
-          <th>Responsable</th>
-          <th>Acciones</th>
+        <th style="text-align:center;">Cliente</th>
+        <th style="text-align:center;">Proyecto</th>
+        <th style="text-align:center;">Descripción</th>
+        <th style="text-align:center;">Ubicación</th>
+        <th style="text-align:center;">Fecha inicio</th>
+        <th style="text-align:center;">Fecha fin</th>
+        <th style="text-align:center;">Responsable</th>
+        <th style="text-align:center;">Acciones</th>
         </tr>
       </thead>
       <tbody id="table-body">
@@ -225,7 +229,31 @@
     </div>
 
     <!-- Modal de detalle -->
+
     
+
+    <div id="modalAsignarProyecto" class="modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); justify-content:center; align-items:center; z-index:1000;">
+  <div style="background:#fff; padding:32px 24px; border-radius:16px; min-width:320px; box-shadow:0 4px 24px rgba(0,59,92,0.12); position:relative;">
+    <button id="cerrarModalAsignarProyecto" style="position:absolute; top:12px; right:12px; background:none; border:none; font-size:1.2em; cursor:pointer;">
+      <i class="ri-close-line"></i>
+    </button>
+    <h2 style="margin-bottom:18px; color:#003B5C;">Asignar proyecto</h2>
+   <form id="formAsignarProyecto">
+  <label>Responsable</label>
+  <div class="autocomplete-container">
+    <input type="text" id="inputTrabajador" placeholder="Selecciona un encargado" autocomplete="off" />
+    <div id="listTrabajador" class="autocomplete-list"></div>
+  </div>
+  <label>Proyecto</label>
+  <div class="autocomplete-container">
+    <input type="text" id="inputProyecto" placeholder="Selecciona un proyecto" autocomplete="off" />
+    <div id="listProyecto" class="autocomplete-list"></div>
+  </div>
+  <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer; margin-top:18px;">Asignar</button>
+</form>
+  </div>
+</div>
+
 
     <script src="../../Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
@@ -233,6 +261,10 @@
 
   </body>
 </html>
+
+
+
+
 
 <div id="modal-nuevo-proyecto" class="modal" style="display: none;">
   <div class="modal-content modal-proyecto">
