--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -164,10 +164,7 @@
               <input type="text" class="input-buscar" placeholder="Buscar...">
               <i class="ri-search-line"></i>
             </div>
-             <button class="btn-asignar">
-              <i class="ri-add-line"></i>
-              Asignar proyecto
-            </button>
+          
           </div>
         </div>
 
@@ -199,10 +196,12 @@
       <table id="trabajadorTable">
         <thead>
           <tr>
-            <th style="border-radius:10px 0 0 0;">Responsable</th>
-            <th>Puesto</th>
-            <th>Cliente</th>
-            <th style="border-radius:0 10px 0 0;">Acciones</th>
+            <th style="text-align:center; border-radius:10px 0 0 0;">Trabajador</th>
+            <th style="text-align:center;">ID Empleado</th>
+            <th style="text-align:center;">Puesto</th>
+            <th style="text-align:center;">Correo</th>
+            <th style="text-align:center;">Usuario</th>
+            <th style="text-align:center; border-radius:0 10px 0 0;">Acciones</th>
           </tr>
         </thead>
         <tbody id="table-body">
@@ -239,28 +238,6 @@
 
 
 
-    <!-- Modal Asignar Proyecto -->
-<div id="modalAsignarProyecto" class="modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); justify-content:center; align-items:center; z-index:1000;">
-  <div style="background:#fff; padding:32px 24px; border-radius:16px; min-width:320px; box-shadow:0 4px 24px rgba(0,59,92,0.12); position:relative;">
-    <button id="cerrarModalAsignarProyecto" style="position:absolute; top:12px; right:12px; background:none; border:none; font-size:1.2em; cursor:pointer;">
-      <i class="ri-close-line"></i>
-    </button>
-    <h2 style="margin-bottom:18px; color:#003B5C;">Asignar proyecto</h2>
-   <form id="formAsignarProyecto">
-  <label>Responsable</label>
-  <div class="autocomplete-container">
-    <input type="text" id="inputTrabajador" placeholder="Selecciona un encargado" autocomplete="off" />
-    <div id="listTrabajador" class="autocomplete-list"></div>
-  </div>
-  <label>Proyecto</label>
-  <div class="autocomplete-container">
-    <input type="text" id="inputProyecto" placeholder="Selecciona un proyecto" autocomplete="off" />
-    <div id="listProyecto" class="autocomplete-list"></div>
-  </div>
-  <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer; margin-top:18px;">Asignar</button>
-</form>
-  </div>
-</div>
 
 
 <!-- Modal Nuevo Trabajador -->
@@ -268,10 +245,13 @@
   <div>
     <button id="cerrarModalNuevoTrabajador">✕</button>
     <h2 style="margin-bottom:18px; color:#003B5C;">Trabajador</h2>
-    <form id="formNuevoTrabajador">
-      <input type="text" name="nombre" placeholder="Nombre" required />
-      <input type="text" name="puesto" placeholder="Puesto" required />
-      <input type="text" name="idEmpleado" placeholder="ID Empleado" required />
+   <form id="formNuevoTrabajador">
+     <input type="text" name="nombre" placeholder="Nombre" required />
+    <input type="text" name="puesto" placeholder="Puesto" required />
+    <input type="text" name="idEmpleado" placeholder="ID Empleado" required />
+    <input type="email" name="correo" placeholder="Correo" required />
+    <input type="text" name="usuario" placeholder="Usuario" required />
+    <input type="password" name="contrasena" placeholder="Contraseña" required />
       <button type="submit">Guardar</button>
     </form>
   </div>
