Ya se agrego la aprte d eimpresion

--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -46,7 +46,7 @@
             <li>
               <a href="../registros/registros.html">
                 <i class="ri-archive-line"></i>
-                <span>Tickets y Facturas</span>
+                <span>Reportes</span>
               </a>
             </li>
                <li class="has-submenu ">
