--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -45,7 +45,7 @@
             <li class="active">
               <a href="../registros/registros.html">
                 <i class="ri-archive-line"></i>
-                <span>Tickets y Facturas</span>
+                <span>Reportes</span>
               </a>
             </li>
                  <li class="has-submenu">
@@ -145,7 +145,7 @@
           text-align: left;
           margin-bottom: 0;
         ">
-          Sistema INXITE / Gestión de Gastos
+          Busca tu proyecto para generar el reporte
         </div>
       </div>
     </div>
@@ -187,7 +187,7 @@
       <div id="imprimir-proyecto-info" class="proyecto-info"></div>
                <!-- ...ya tienes el filtro y la tabla debajo... -->
 
-
+<img src="../../img/inxite.png" alt="Logo Inxite" style="display:block; margin:0 auto 18px auto; max-width:160px;">
             <div class="table-container" id="imprimir-table-container">
               <table id="imprimir-facturas-table">
                 <thead>
