--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -44,7 +44,7 @@
             <li>
               <a href="../registros/registros.html">
                 <i class="ri-archive-line"></i>
-                <span>Tickets y Facturas</span>
+                <span>Reportes</span>
               </a>
             </li>
             <li class="has-submenu ">
